--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -77,6 +77,9 @@
     "OldestFeedsFirst": {
         "message": "Oldest feeds first"
     },
+    "OpenAllFeeds": {
+        "message": "Open all feeds"
+    },
     "OpenSiteOnIconClick": {
         "message": "Ouvrir le site Feedly lors du clique sur l'icone (Désactive la popup)"
     },
@@ -106,6 +109,9 @@
     },
     "ShowFullFeedContent": {
         "message": "Afficher le contenu complet dans la vue développé (quand c'est possible)"
+    },
+    "UpdateFeeds": {
+        "message": "Update"
     },
     "UpdateFollowingCategories": {
         "message": "Mettre à jour uniquement ces catégories"
