Added option to open all feeds when popup is opened.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -17,6 +17,9 @@
     "EnableBackgroundMode": {
         "message": "Enable background mode"
     },
+    "ExpandFeeds": {
+        "message": "Expand all feeds when popup is opened"
+    },
     "ExtensionDescription": {
         "message": "Extension for Feedly news reader"
     },
