--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -83,6 +83,9 @@
     "OpenAllFeeds": {
         "message": "Open all feeds"
     },
+    "OpenFeedsInSameTab": {
+        "message": "Open feeds in the same tab"
+    },
     "OpenSiteOnIconClick": {
         "message": "Open Feedly site on icon click (don't show popup)"
     },
